src/objects/Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrower_s_Signature_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicates that borrower needs to sign and return the attached document</description>
        <inlineHelpText>Checkbox indicates that borrower needs to sign and return the attached document</inlineHelpText>
        <label>Borrower&apos;s Signature Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Request Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checklist_Item_Due_Date__c</fullName>
        <formula>Case__r.Deadline_to_Submit_Documents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Item Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checklist_Item_Status__c</fullName>
        <label>Checklist Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending Borrower&apos;s Verification</fullName>
                </value>
                <value>
                    <fullName>Pending Case Manager Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Item_Text__c</fullName>
        <description>Populated from related Master Checklist Document Description field</description>
        <label>Checklist Item Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next__c</fullName>
        <label>Drawloop Next</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates to generate drawloop document when checked</description>
        <label>Generate Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Reason_Code__c</fullName>
        <description>Reason why checklist item submitted by applicant is Invalid</description>
        <inlineHelpText>Reason why checklist item submitted by applicant is Invalid</inlineHelpText>
        <label>Invalid Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document is illegible</fullName>
                </value>
                <value>
                    <fullName>Wrong Document</fullName>
                </value>
                <value>
                    <fullName>Incomplete Document</fullName>
                </value>
                <value>
                    <fullName>Outdated Document</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Action_Date__c</fullName>
        <label>Last Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Condition</label>
        <referenceTo>Loan_Condition_Checklist__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Closing Checklist</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Checklist__c</fullName>
        <label>Master Checklist</label>
        <referenceTo>Master_Checklist__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Code_Description__c</fullName>
        <description>Field is required when App Processing checklist item = Invalid AND Invalid Reason code = Other OR Closing Document Checklist Item = Invalid</description>
        <inlineHelpText>Please provide details for marking the document Invalid</inlineHelpText>
        <label>Invalid Reason Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field indicates what type of item is needed, e.g., documents during the application process stage vs. closing documents during the closing stage</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document Gathering</fullName>
                </value>
                <value>
                    <fullName>Closing Documents</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Commitment Documents</fullName>
                </value>
                <value>
                    <fullName>System Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <description>Field indicates the user that verified the checklist item by changing the status to Valid/Invalid and adding the Invalid Reason Description</description>
        <inlineHelpText>User that verified this checklist item by changing the status to Valid/Invalid and adding the Invalid Reason Description</inlineHelpText>
        <label>Verified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <description>Date when Checklist Item Status is changed to Valid</description>
        <inlineHelpText>Date indicates when the checklist item was marked as Valid</inlineHelpText>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Checklist Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Drawloop_Next__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invalid_Reason_Code</fullName>
        <active>true</active>
        <description>Validation rule ensure that a Invalid Reason Code is entered when the Checklist Item Status is set to Invalid</description>
        <errorConditionFormula>ISPICKVAL( Checklist_Item_Status__c , &quot;Invalid&quot;) &amp;&amp; ISPICKVAL( Invalid_Reason_Code__c,&quot;&quot;) &amp;&amp; ISPICKVAL(  Type__c , &quot;Document Gathering&quot;)</errorConditionFormula>
        <errorDisplayField>Invalid_Reason_Code__c</errorDisplayField>
        <errorMessage>You must enter an Invalid Reason Code for Documents labeled Invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Invalid_Reason_Description</fullName>
        <active>true</active>
        <description>If Invalid Reason Code = Other, then a description must be provided</description>
        <errorConditionFormula>(ISPICKVAL( Invalid_Reason_Code__c , &quot;Other&quot;) &amp;&amp; ISBLANK(  Other_Reason_Code_Description__c)&amp;&amp;  ISPICKVAL( Type__c , &quot;Document Gathering&quot;) )

|| 

(ISPICKVAL( Checklist_Item_Status__c , &quot;Invalid&quot;) &amp;&amp;  ISPICKVAL( Type__c , &quot;Closing Documents&quot;)&amp;&amp; ISBLANK(  Other_Reason_Code_Description__c))</errorConditionFormula>
        <errorDisplayField>Other_Reason_Code_Description__c</errorDisplayField>
        <errorMessage>You must enter an Invalid Reason Description for Documents labeled Invalid</errorMessage>
    </validationRules>
</CustomObject>